<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:contentDescription="@string/menu_description"
        android:src="@drawable/ic_menu"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Store location"
        android:textColor="#000000"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="156dp"
        tools:layout_editor_absoluteY="16dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Mondolibug, Sylhet"
        android:textColor="#808080"
        android:textSize="14sp"
        tools:layout_editor_absoluteX="146dp"
        tools:layout_editor_absoluteY="51dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:contentDescription="@string/shopping_cart_description"
        android:src="@drawable/shop"
        tools:layout_editor_absoluteX="351dp"
        tools:layout_editor_absoluteY="16dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView56"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:contentDescription="@string/shopping_cart_description"
        android:src="@drawable/shop"
        tools:layout_editor_absoluteX="185dp"
        tools:layout_editor_absoluteY="659dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/nike_description"
        android:src="@drawable/ic_nike"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="153dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/puma_description"
        android:src="@drawable/ic_puma"
        tools:layout_editor_absoluteX="98dp"
        tools:layout_editor_absoluteY="153dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/brand_52_description"
        android:src="@drawable/ic_52"
        tools:layout_editor_absoluteX="265dp"
        tools:layout_editor_absoluteY="153dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/adidas_description"
        android:src="@drawable/ic_adidas"
        tools:layout_editor_absoluteX="347dp"
        tools:layout_editor_absoluteY="153dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/converse_description"
        android:src="@drawable/ic_converse"
        tools:layout_editor_absoluteX="181dp"
        tools:layout_editor_absoluteY="153dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/new_arrivals_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Popular Shoes"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="218dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/new_arrivals_text5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Arrivals"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="474dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/new_arrivals_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="See all"
        android:textColor="@color/Blue1"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.945"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="218dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/new_arrivals_text4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="See all"
        android:textColor="@color/Blue1"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.94"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="479dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:contentDescription="@string/home_description"
        android:src="@drawable/ic_home"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="659dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:contentDescription="@string/favorite_description"
        android:src="@drawable/ic_favorite"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="105dp"
        tools:layout_editor_absoluteY="667dp" />

    <ImageView
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:contentDescription="@string/notifications_description"
        android:src="@drawable/ic_notifications"
        tools:layout_editor_absoluteX="269dp"
        tools:layout_editor_absoluteY="659dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:contentDescription="@string/user_description"
        android:src="@drawable/user"
        tools:layout_editor_absoluteX="351dp"
        tools:layout_editor_absoluteY="659dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/shoeImage8"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:src="@drawable/fon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.91"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.502"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/shoeImage6"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:src="@drawable/fon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.155"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.502"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/shoeImage7"
        android:layout_width="359dp"
        android:layout_height="114dp"
        android:src="@drawable/fon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.722"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.876"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView40"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:srcCompat="@drawable/nike_air_jordan"
        tools:layout_editor_absoluteX="223dp"
        tools:layout_editor_absoluteY="253dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView59"
        android:layout_width="150dp"
        android:layout_height="114dp"
        app:srcCompat="@drawable/nike_air_jordan"
        tools:layout_editor_absoluteX="235dp"
        tools:layout_editor_absoluteY="516dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView55"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:srcCompat="@drawable/nike_air_max"
        tools:layout_editor_absoluteX="38dp"
        tools:layout_editor_absoluteY="253dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView50"
        android:layout_width="17dp"
        android:layout_height="18dp"
        app:srcCompat="@drawable/location"
        tools:layout_editor_absoluteX="129dp"
        tools:layout_editor_absoluteY="52dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView54"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/top_bar"
        tools:layout_editor_absoluteX="38dp"
        tools:layout_editor_absoluteY="88dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView57"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/plusee"
        tools:layout_editor_absoluteX="339dp"
        tools:layout_editor_absoluteY="417dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView58"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/plusee"
        tools:layout_editor_absoluteX="154dp"
        tools:layout_editor_absoluteY="417dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/abeeze"
        android:text="Nike Jordan"
        android:textColor="@color/black"
        tools:layout_editor_absoluteX="51dp"
        tools:layout_editor_absoluteY="376dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView78"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/abeeze"
        android:text="Nike Jordan"
        android:textColor="@color/black"
        android:textSize="26dp"
        tools:layout_editor_absoluteX="38dp"
        tools:layout_editor_absoluteY="537dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView79"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/abeeze"
        android:text="$849.69"
        android:textColor="@color/black"
        android:textSize="22dp"
        tools:layout_editor_absoluteX="38dp"
        tools:layout_editor_absoluteY="582dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView76"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/abeeze"
        android:text="$493.00"
        android:textColor="@color/black"
        tools:layout_editor_absoluteX="51dp"
        tools:layout_editor_absoluteY="403dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView77"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/abeeze"
        android:text="$493.00"
        android:textColor="@color/black"
        tools:layout_editor_absoluteX="235dp"
        tools:layout_editor_absoluteY="403dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView75"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/abeeze"
        android:text="Nike Jordan"
        android:textColor="@color/black"
        tools:layout_editor_absoluteX="235dp"
        tools:layout_editor_absoluteY="376dp"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>
